deployment-scripts/production/reelcruit-employer-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-employer
  namespace: production
  labels:
    app: reelcruit-employer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-employer
  template:
    metadata:
      labels:
        app: reelcruit-employer
    spec:
      containers:
        - name: reelcruit
          image:  reelcruitapp/reelcruit-employer-app
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: reelcruit-employer-svc
  namespace: production
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: reelcruit-employer
