deployment-scripts/production/reelcruit-employer-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employer-fe-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: employer.reelcruit.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reelcruit-employer-svc
            port:
              number: 3000
   - host: www.employer.reelcruit.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: reelcruit-employer-svc
             port:
               number: 3000
